THE CONTENTS IN THE TEST DIRECTORY (WHICH IS FOUND WITHIN THE JS DIRECTORY) INCLUDE THE VARIOUS ATTEMPTS AT CREATING A UNLIMITED SUDOKU PUZZLE GENERATOR (HOWEVER THEY WERE UNSUCCESSFUL AT THE TIME BEING). WAS ABLE TO IMPLEMENT A SUDOKU GENERATOR. NEW PUZZLE IS GENERATED WHENEVER THE PAGE IS REFRESHED. NEXT STEP WILL BE TO ONLY GENERATE A NEW PUZZLE WHEN THE CLOCK HITS 12:00 AM EST, AND TO KEEP THE SAME PUZZLE AND TIMER INFORMATION EVEN AFTER THE PAGE IS REFRESHED AND/OR CLOSED. CREATED A INSTRUCTIONS.INDEX FILE, WHICH CONTAINS THE INSTRUCTIONS FOR THE SUDOKU GAME. HOWEVER, IT STILL MUST BE FORMATTED USING CSS.

--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -134,9 +134,10 @@ hr {
 }
 
 .number:hover {
-    box-shadow: 0 0 7px #2698BF;
-    transition: 0.5s;
-    transition-property: box-shadow;
+    box-shadow: 0 0 7px black;
+    background-color:#2698BF ;
+    color: #33CBff;
+    transition-property: color, background-color, box-shadow;
 }
 
 .number-selected {
