--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,10 @@ a {
     background-color: #9f2020;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 0px 10px;
+    width: 99%;
+    position: fixed;
 }
 button {
     background-color: #9f2020;
@@ -40,7 +43,7 @@ button:hover {
 .xumm {
     display: flex;
     justify-content: flex-end;
-    margin: 50px;
+    margin: 100px 50px;
 }
 .login {
     background-color: #0030CE;
@@ -67,6 +70,7 @@ button:hover {
     margin: 0 auto;
     text-shadow: 0 0 7px black;
     font-size: 56px;
+    padding-bottom: 50px;
 }
 
 .info {
@@ -81,7 +85,7 @@ button:hover {
     align-items: center;
     gap: 10px;
     padding: 50px 0px;
-    padding-bottom: 150px;
+    padding-bottom: 100px;
 }
 .sologenic {
     background-color: #222222;
@@ -118,16 +122,22 @@ button:hover {
     box-shadow: 0 0 14px #FF3333;
 }
 
+.extra-space {
+    background-color: #601313;
+}
+
 .footer {
     display: flex;
     justify-content: center;
     align-items: center;
     max-height: 30px;
-    position: fixed;
+    /*position: fixed;*/
     gap: 25px;
     bottom: 0%;
     left: 50%;
     right: 50%;
+    background-color: #9f2020;
+    padding-top: 10px;
 }
 .twitter, .medium, .instagram {
     height: auto;
