--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -84,6 +84,13 @@ hr {
     font-weight: 500;
 }
 
+#outcome {
+    max-width: fit-content;
+    font-size: 21px;
+    font-weight: bold;
+    color: #2698BF;
+}
+
 #board {
     width: 450px;
     height: 450px;
