Created an NFT gallery layout, along with a lightbox for better viewing. Updated cursor UI on all pages when hovering over a clickable link/button. Updated sudoku game cursor hover. Made it so that when you hover over a non-prefilled tile on the sudoku board, it changes colour, so that users know exactly which tile they are on.

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ button {
     font-weight: bold;
     text-shadow: 0 0 1px black;
     font-size: 28px;
+    cursor: pointer;
 }
 button:hover {
     background-color: #BF2626;
